Actions
Bug #1711
closedsun_fc is missing includes when compiler has more strict namespacing
Start date:
2011-10-31
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
In GCC4.3, the C++ headers were cleaned up to themselves include as few headers as possible, to avoid polluting the namespace, see: http://gcc.gnu.org/gcc-4.3/porting_to.html
Given these changes, sun_fc needs to explicitly include headers for the functions it uses (mostly <cstring>, a few <climits> and <cstdlib>).
Updated by Rich Lowe about 12 years ago
- Status changed from New to Resolved
- % Done changed from 60 to 100
Resolved in r13503 commit:32ce03c4d7ea
Actions