1711 sun_fc is missing includes when compiler has more strict namespacing Reviewed by: Garrett D'Amore <garrett@nexenta.com> Reviewed by: Dan Kruchinin <dkruchinin@acm.org> Reviewed by: Dan McDonald <danmcd@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>