usr/src/lib/sun_fc/common/Sun_fcGetTgtAdapterName.cc
@@ -28,6 +28,8 @@
 #include "HBAList.h"
 #include "Trace.h"
 #include "Exceptions.h"
+#include <cstring>
+
 #ifdef	__cplusplus
 extern "C" {
 #endif
